[gd_scene load_steps=34 format=2]

[ext_resource path="res://Characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Camera2D.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Characters/Player/Health.gd" type="Script" id=4]
[ext_resource path="res://Health_Bar_2 (1).png" type="Texture" id=5]
[ext_resource path="res://Health_Bar_1_(fixed) (1).png" type="Texture" id=6]
[ext_resource path="res://Characters/Player/damage vingette.png" type="Texture" id=7]
[ext_resource path="res://Characters/Player/Effects.gd" type="Script" id=8]
[ext_resource path="res://Levels/BG/Untitled_Artwork-1.png" type="Texture" id=10]
[ext_resource path="res://Characters/light.png" type="Texture" id=11]
[ext_resource path="res://Levels/Tileset/SparkForestLevels/Spark Forest Levels.tscn" type="PackedScene" id=12]
[ext_resource path="res://Levels/Platforms.tscn" type="PackedScene" id=13]
[ext_resource path="res://Characters/enemy/Thorny.tscn" type="PackedScene" id=14]
[ext_resource path="res://Levels/Level Scenes/DeathBarrier.tscn" type="PackedScene" id=15]

[sub_resource type="VisualShader" id=1]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="VisualShader" id=3]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )

[sub_resource type="VisualShader" id=5]
code = "shader_type spatial;
render_mode specular_schlick_ggx;




void vertex() {
// Output:0

}

void fragment() {
// Output:0

}

void light() {
// Output:0

}
"

[sub_resource type="ShaderMaterial" id=6]
render_priority = 1
shader = SubResource( 5 )

[sub_resource type="Animation" id=7]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D/Post Processing/Edge blur/damage vingette:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.996078, 0.796078, 0.796078, 0 ), Color( 0.0352941, 0.027451, 0.027451, 0.733333 ), Color( 0.996078, 0.796078, 0.796078, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Camera2D/Post Processing/Edge blur/Edge blur:material:shader_param/blur_amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.579, 0.0, 0.579 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Camera2D/Post Processing/Curve/Curve:material:shader_param/tiled_factor")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.052, 0.071 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Camera2D/Post Processing/Curve/Curve:material:shader_param/zoom")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.05, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 1.0, 0.893, 1.0, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Camera2D/Post Processing/chromatic abberation/chromatic abberation:material:shader_param/amount")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.004, 0.037, 0.004 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Camera2D/Post Processing/Edge blur/Edge blur:material:shader_param/blur_amount")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.579, 0.0, 0.579 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Camera2D:zoom")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = false
tracks/6/keys = {
"times": PoolRealArray( 0, 0.1, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1.5, 1.5 ), Vector2( 1.2, 1.2 ), Vector2( 1.5, 1.5 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Camera2D:offset")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.4, 2.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 20, 15 ), Vector2( -20, -10 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=8]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 21.1691, 38.6865 )

[sub_resource type="Animation" id=10]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 24, 25 ]
}

[sub_resource type="Animation" id=11]
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7, 5.8, 5.9, 6, 6.1, 6.2, 6.3, 6.4, 6.5, 6.6, 6.7, 6.8, 6.9, 7, 7.1, 7.2, 7.3, 7.4, 7.5, 7.6, 7.7, 7.8, 7.9, 8, 8.1, 8.2, 8.3, 8.4, 8.5, 8.6, 8.7, 8.8, 8.9, 9, 9.1, 9.2, 9.3, 9.4, 9.5, 9.6, 9.7, 9.8, 9.9, 10, 10.1, 10.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11, 10, 11 ]
}

[sub_resource type="Animation" id=12]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 15 ]
}

[sub_resource type="Animation" id=13]
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5, 11 ]
}

[sub_resource type="Animation" id=14]
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 23, 12, 17, 23 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.025, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=15]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 21, 17, 18, 20, 16 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Attack:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[sub_resource type="Animation" id=16]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24 ]
}

[sub_resource type="Animation" id=17]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Player_sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 26, 28 ]
}

[sub_resource type="OccluderPolygon2D" id=18]
polygon = PoolVector2Array( -10.4957, -4.00331, -5.36686, -4.08608, -5.57764, 4.02564, -11.1983, 4.60504 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 278.376, 42.1721 )

[node name="Spark Forest 1-9(1)" type="Node2D"]

[node name="Portals" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="." groups=[
"Player",
]]
collision_layer = 2
collision_mask = 257
script = ExtResource( 1 )
health = 5

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( -1796, -321 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
limit_top = 0
limit_right = 10000
limit_bottom = 2049
smoothing_enabled = true
drag_margin_top = 0.75
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="Player/Camera2D"]

[node name="ViewportContainer" type="ViewportContainer" parent="Player/Camera2D"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Post Processing" type="CanvasLayer" parent="Player/Camera2D"]
layer = 13

[node name="Curve" type="CanvasLayer" parent="Player/Camera2D/Post Processing"]
layer = 18

[node name="Curve" type="Sprite" parent="Player/Camera2D/Post Processing/Curve"]
visible = false
material = SubResource( 2 )
position = Vector2( 578.198, 553.58 )
scale = Vector2( 18.164, 17.397 )
z_index = 38
texture = ExtResource( 3 )

[node name="ui" type="Node2D" parent="Player/Camera2D/Post Processing/Curve"]

[node name="Health" type="CanvasLayer" parent="Player/Camera2D/Post Processing/Curve/ui"]
layer = 19
script = ExtResource( 4 )

[node name="Health_Bar_2 (1)" type="Sprite" parent="Player/Camera2D/Post Processing/Curve/ui/Health"]
position = Vector2( 205.916, 178.932 )
scale = Vector2( 0.253553, 0.33434 )
texture = ExtResource( 5 )

[node name="1" type="Sprite" parent="Player/Camera2D/Post Processing/Curve/ui/Health"]
position = Vector2( 77.3043, 71.695 )
scale = Vector2( 0.0577467, 0.0597551 )
texture = ExtResource( 6 )

[node name="2" type="Sprite" parent="Player/Camera2D/Post Processing/Curve/ui/Health"]
position = Vector2( 136.304, 71.695 )
scale = Vector2( 0.0577467, 0.0597551 )
texture = ExtResource( 6 )

[node name="3" type="Sprite" parent="Player/Camera2D/Post Processing/Curve/ui/Health"]
position = Vector2( 195.304, 71.695 )
scale = Vector2( 0.0577467, 0.0597551 )
texture = ExtResource( 6 )

[node name="4" type="Sprite" parent="Player/Camera2D/Post Processing/Curve/ui/Health"]
position = Vector2( 254.304, 71.695 )
scale = Vector2( 0.0577467, 0.0597551 )
texture = ExtResource( 6 )

[node name="5" type="Sprite" parent="Player/Camera2D/Post Processing/Curve/ui/Health"]
position = Vector2( 313.304, 71.695 )
scale = Vector2( 0.0577467, 0.0597551 )
texture = ExtResource( 6 )

[node name="chromatic abberation" type="CanvasLayer" parent="Player/Camera2D/Post Processing"]
layer = 11

[node name="chromatic abberation" type="Sprite" parent="Player/Camera2D/Post Processing/chromatic abberation"]
visible = false
material = SubResource( 4 )
position = Vector2( 573.341, 393.849 )
scale = Vector2( 18.064, 12.329 )
z_index = 38
texture = ExtResource( 3 )

[node name="Edge blur" type="CanvasLayer" parent="Player/Camera2D/Post Processing"]
layer = 12

[node name="Edge blur" type="Sprite" parent="Player/Camera2D/Post Processing/Edge blur"]
visible = false
material = SubResource( 6 )
position = Vector2( 573.916, 392.529 )
scale = Vector2( 18.064, 12.329 )
z_index = 36
texture = ExtResource( 3 )

[node name="damage vingette" type="Sprite" parent="Player/Camera2D/Post Processing/Edge blur"]
modulate = Color( 0.996078, 0.796078, 0.796078, 0 )
position = Vector2( 572.216, 323.186 )
scale = Vector2( 0.601395, 0.601395 )
z_index = -1
texture = ExtResource( 7 )

[node name="Effects" type="AnimationPlayer" parent="Player"]
anims/Damage = SubResource( 7 )
script = ExtResource( 8 )

[node name="Player_sprite" type="Sprite" parent="Player"]
material = SubResource( 8 )
position = Vector2( -1.66367, -47.0271 )
scale = Vector2( 0.33434, 0.33434 )
z_index = 8
hframes = 5
vframes = 6
frame = 24

[node name="World_collision" type="CollisionShape2D" parent="Player"]
position = Vector2( 4.10633, -30.8677 )
shape = SubResource( 9 )

[node name="Dash" type="Timer" parent="Player"]
wait_time = 0.2
one_shot = true

[node name="Dash_invun" type="Timer" parent="Player"]

[node name="DashLag" type="Timer" parent="Player"]
one_shot = true

[node name="sound_dash" type="AudioStreamPlayer2D" parent="Player"]

[node name="sound_damage" type="AudioStreamPlayer2D" parent="Player"]
volume_db = 0.642

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
autoplay = "Idle"
anims/Dash = SubResource( 10 )
anims/Fall = SubResource( 11 )
anims/Idle = SubResource( 12 )
anims/Jump = SubResource( 13 )
anims/Punch = SubResource( 14 )
anims/Punch2 = SubResource( 15 )
anims/RESET = SubResource( 16 )
anims/Walk = SubResource( 17 )

[node name="CanvasLayer" type="CanvasLayer" parent="Player"]
layer = -3

[node name="BG" type="Sprite" parent="Player/CanvasLayer"]
position = Vector2( 628.502, 475.297 )
scale = Vector2( 0.588, 0.588 )
z_index = -18
texture = ExtResource( 10 )

[node name="jump_timer" type="Timer" parent="Player"]
one_shot = true

[node name="DamageTimer" type="Timer" parent="Player"]
one_shot = true

[node name="Attack_timer" type="Timer" parent="Player"]

[node name="Attack_timer2" type="Timer" parent="Player"]

[node name="jump_particles" type="Node2D" parent="Player"]
position = Vector2( -14.1581, 28.7882 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Player"]
visible = false
position = Vector2( 89.1344, -12.539 )
scale = Vector2( 12.6804, 10.7632 )
occluder = SubResource( 18 )

[node name="Light2D" type="Light2D" parent="Player"]
visible = false
position = Vector2( -10.0381, -11.6982 )
scale = Vector2( 12.6804, 10.7632 )
texture = ExtResource( 11 )
texture_scale = 0.16
energy = 1.39
range_height = 16.1
range_layer_min = -19
range_layer_max = 8
shadow_enabled = true
shadow_gradient_length = 3.0

[node name="Attack" type="Area2D" parent="Player"]
monitoring = false
collision_layer = 2
collision_mask = 2

[node name="Attack_collision" type="CollisionShape2D" parent="Player/Attack"]
position = Vector2( 206.624, -30.8677 )
shape = SubResource( 19 )

[node name="Spark Forest Levels" parent="." instance=ExtResource( 12 )]
tile_data = PoolIntArray( 0, 13, 0, 31, 12, 0, 62, 11, 0, 93, 11, 0, 123, 10, 0 )

[node name="Platforms" parent="." instance=ExtResource( 13 )]
tile_data = PoolIntArray( 589832, 1, 0, 655382, 1, 0, 655399, 1, 0, 720931, 1, 0, 720952, 1, 0, 786479, 1, 0, 851981, 1, 0, 851986, 1, 0, 851994, 1, 0, 851999, 1, 0, 852011, 1, 0 )

[node name="Enemies" type="Node" parent="."]

[node name="Thorny" parent="Enemies" instance=ExtResource( 14 )]
position = Vector2( 637, 651 )
scale = Vector2( 10, 10 )
group = "Player"

[node name="Deathzone" type="Node2D" parent="."]

[node name="Portal" parent="Deathzone" instance=ExtResource( 15 )]
position = Vector2( 851, 1325 )

[connection signal="grounded_updated" from="Player" to="Player/Camera2D" method="_on_Player_grounded_updated"]
[connection signal="health_update" from="Player" to="Player/Camera2D/Post Processing/Curve/ui/Health" method="_on_Player_health_update"]
[connection signal="timeout" from="Player/Dash" to="Player" method="_on_Dash_timeout"]
[connection signal="timeout" from="Player/Dash_invun" to="Player" method="_on_Dash_invun_timeout"]
[connection signal="timeout" from="Player/DashLag" to="Player" method="_on_DashLag_timeout"]
[connection signal="animation_finished" from="Player/AnimationPlayer" to="Player" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Player/jump_timer" to="Player" method="_on_jump_timer_timeout"]
[connection signal="timeout" from="Player/DamageTimer" to="Player" method="_on_Damage_timeout"]
[connection signal="timeout" from="Player/Attack_timer" to="Player" method="_on_Attack_timer_timeout"]
[connection signal="timeout" from="Player/Attack_timer2" to="Player" method="_on_Attack_timer2_timeout"]
[connection signal="area_entered" from="Player/Attack" to="Player" method="_on_Attack_area_entered"]
[connection signal="body_shape_entered" from="Player/Attack" to="Player" method="_on_Attack_body_shape_entered"]
